--- a/bootstrap/less/scaffolding.less
+++ b/bootstrap/less/scaffolding.less
@@ -55,11 +55,6 @@ a:hover {
 
 }
 
-.stick{
-  position:fixed;
-  top:0;
-}
-
 footer{
   padding:0 40px;
   font-size:14px;
